package vehiclesSenseFactory;

public interface Vehicle {
    public abstract void drive();
}
