@startuml

title __VEHICLESFACTORY's Class Diagram__\n

  namespace vehicleSimpleFactory {
    class vehicleSimpleFactory.Car {
    }
  }
  

  namespace vehicleSimpleFactory {
    class vehicleSimpleFactory.TestDrive {
    }
  }
  

  namespace vehicleSimpleFactory {
    class vehicleSimpleFactory.Truck {
    }
  }
  

  namespace vehicleSimpleFactory {
    abstract class vehicleSimpleFactory.Vehicle {
    }
  }
  

  namespace vehicleSimpleFactory {
    enum VehicleFactory {
    }
  }
  

  namespace vehicleSimpleFactory {
    enum VehicleTypes {
    }
  }
  

  namespace vehiclesFactoryMethod {
    class vehiclesFactoryMethod.Car {
    }
  }
  

  namespace vehiclesFactoryMethod {
    class vehiclesFactoryMethod.TestDrive {
    }
  }
  

  namespace vehiclesFactoryMethod {
    class vehiclesFactoryMethod.Truck {
    }
  }
  

  namespace vehiclesFactoryMethod {
    interface vehiclesFactoryMethod.Vehicle {
    }
  }
  

  namespace vehiclesFactoryMethod {
    enum VehicleFactory {
    }
  }
  

  namespace vehiclesFactoryMethod {
    enum VehicleTypes {
    }
  }
  

  namespace vehiclesSenseFactory {
    class vehiclesSenseFactory.Car {
    }
  }
  

  namespace vehiclesSenseFactory {
    class vehiclesSenseFactory.TestDrive {
    }
  }
  

  namespace vehiclesSenseFactory {
    class vehiclesSenseFactory.Truck {
    }
  }
  

  namespace vehiclesSenseFactory {
    interface vehiclesSenseFactory.Vehicle {
    }
  }
  

  namespace vehiclesSenseFactory {
    enum VehicleTypes {
    }
  }
  

  namespace vehiclesSenseFactory {
    namespace tatic {
      class vehiclesSenseFactoryStatic.Car {
      }
    }
  }
  

  namespace vehiclesSenseFactory {
    namespace tatic {
      class vehiclesSenseFactoryStatic.TestDrive {
      }
    }
  }
  

  namespace vehiclesSenseFactory {
    namespace tatic {
      class vehiclesSenseFactoryStatic.Truck {
      }
    }
  }
  

  namespace vehiclesSenseFactory {
    namespace tatic {
      abstract class vehiclesSenseFactoryStatic.Vehicle {
      }
    }
  }
  

  namespace vehiclesSenseFactory {
    namespace tatic {
      enum VehicleTypes {
      }
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.Car {
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.Car {
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.TestDrive {
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.TestDrive {
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.Truck {
    }
  }
  

  namespace vehiclesfactory {
    class vehiclesfactory.Truck {
    }
  }
  

  namespace vehiclesfactory {
    interface vehiclesfactory.Vehicle {
    }
  }
  

  namespace vehiclesfactory {
    interface vehiclesfactory.Vehicle {
    }
  }
  

  namespace vehiclesfactory {
    enum VehicleFactory {
    }
  }
  

  namespace vehiclesfactory {
    enum VehicleFactory {
    }
  }
  

  namespace vehiclesfactory {
    enum VehicleTypes {
    }
  }
  

  namespace vehiclesfactory {
    enum VehicleTypes {
    }
  }
  

  vehicleSimpleFactory.Car -up-|> vehicleSimpleFactory.Vehicle
  vehicleSimpleFactory.Truck -up-|> vehicleSimpleFactory.Vehicle
  vehiclesFactoryMethod.Car .up.|> vehiclesFactoryMethod.Vehicle
  vehiclesFactoryMethod.Truck .up.|> vehiclesFactoryMethod.Vehicle
  vehiclesSenseFactory.Car .up.|> vehiclesSenseFactory.Vehicle
  vehiclesSenseFactory.Truck .up.|> vehiclesSenseFactory.Vehicle
  vehiclesSenseFactoryStatic.Car -up-|> vehiclesSenseFactoryStatic.Vehicle
  vehiclesSenseFactoryStatic.Truck -up-|> vehiclesSenseFactoryStatic.Vehicle
  vehiclesfactory.Car .up.|> vehiclesfactory.Vehicle
  vehiclesfactory.Car .up.|> vehiclesfactory.Vehicle
  vehiclesfactory.Truck .up.|> vehiclesfactory.Vehicle
  vehiclesfactory.Truck .up.|> vehiclesfactory.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
